# maybedata

./: .gitignore  README.md  maybedata.py  pyproject.toml
maybedata/: __init__.py  maybedata.py
