[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "maybedata"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

[[project.authors]]
name = "Anselm Schüler"
email = "mail@anselmschueler.com"

[project.urls]
Home = "https://github.com/schuelermine/maybedata"

[mypy]
strict = true
